--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-  "version": "2.1.0",
-  "author": "remy@leftlogic.com",
-  "private": true,
-  "dependencies": {},
-  "keywords": [
-    "pebble-app"
-  ],
-  "pebble": {
-    "sdkVersion": "3",
-    "resources": {
-      "media": [
-        {
-          "type": "png",
-          "name": "IMAGE_GO",
-          "file": "images/go-light.png"
-        },
-        {
-          "menuIcon": true,
-          "type": "png",
-          "name": "IMAGE_LOG_NEW",
-          "file": "images/new-icon.png"
+    "author": "remy@leftlogic.com", 
+    "dependencies": {}, 
+    "keywords": [
+        "pebble-app"
+    ], 
+    "name": "Rest", 
+    "pebble": {
+        "capabilities": [
+            "configurable", 
+            "health"
+        ], 
+        "displayName": "Rest", 
+        "enableMultiJS": false, 
+        "messageKeys": {
+            "down": 2, 
+            "select": 1, 
+            "theme": 3, 
+            "up": 0
+        }, 
+        "projectType": "native", 
+        "resources": {
+            "media": [
+                {
+                    "file": "images/go-light.png", 
+                    "name": "IMAGE_GO", 
+                    "type": "png"
+                }, 
+                {
+                    "file": "images/new-icon.png", 
+                    "menuIcon": true, 
+                    "name": "IMAGE_LOG_NEW", 
+                    "type": "png"
+                }
+            ]
+        }, 
+        "sdkVersion": "3", 
+        "targetPlatforms": [
+            "aplite", 
+            "basalt", 
+            "diorite", 
+            "emery"
+        ], 
+        "uuid": "2aa4a9d5-9e9c-42d8-900e-94ed581ef0a8", 
+        "watchapp": {
+            "hiddenApp": false, 
+            "onlyShownOnCommunication": false, 
+            "watchface": false
         }
-      ]
-    },
-    "projectType": "native",
-    "uuid": "2aa4a9d5-9e9c-42d8-900e-94ed581ef0a8",
-    "messageKeys": {
-      "down": 2,
-      "theme": 3,
-      "up": 0,
-      "select": 1
-    },
-    "enableMultiJS": false,
-    "displayName": "Rest",
-    "watchapp": {
-      "onlyShownOnCommunication": false,
-      "hiddenApp": false,
-      "watchface": false
-    },
-    "targetPlatforms": [
-      "aplite",
-      "basalt",
-      "diorite",
-      "emery"
-    ],
-    "capabilities": [
-      "configurable",
-      "health"
-    ]
-  },
-  "name": "Rest"
+    }, 
+    "private": true, 
+    "version": "2.1.0"
 }
