Remove emery platform from build

--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
         "targetPlatforms": [
             "aplite", 
             "basalt", 
-            "diorite", 
-            "emery"
+            "diorite" 
         ], 
         "uuid": "2aa4a9d5-9e9c-42d8-900e-94ed581ef0a8", 
         "watchapp": {
