--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "name": "Rest", 
     "pebble": {
         "capabilities": [
-            "configurable", 
-            "health"
+            "configurable"
         ], 
         "displayName": "Rest", 
         "enableMultiJS": false, 
